<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewmodel"
            type="piuwcreative.moviecatalogue.ui.search.SearchViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.search.SearchFragment">
        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:layout_marginTop="27dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/roboto_light"
            android:text="@string/search"/>
        <LinearLayout
            android:layout_below="@id/header"
            android:id="@+id/search_badge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:weightSum="10">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="@={viewmodel.keyword}"
                android:drawableEnd="@drawable/ic_search"
                android:hint="@string/masukkan_kata_kunci" />

            <Button
                android:onClick="@{viewmodel::search}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/search" />
        </LinearLayout>

        <belka.us.androidtoggleswitch.widgets.ToggleSwitch
            android:id="@+id/toggle_switches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_badge"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            custom:activeBgColor="@color/colorPrimaryDark"
            custom:inactiveBgColor="@color/grey"
            custom:textToggleLeft="@string/movie"
            custom:textToggleRight="@string/tvShow"
            custom:toggleWidth="100dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toggle_switches"
            android:layout_marginTop="10dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_container1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_below="@id/toggle_switches"
            android:layout_marginTop="10dp" />

        <com.facebook.shimmer.ShimmerFrameLayout
            app:shimmer_auto_start="false"
            android:id="@+id/shimmer_layout"
            android:layout_below="@id/toggle_switches"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <include layout="@layout/item_movie_shimmer" />
                <include layout="@layout/item_movie_shimmer" />
                <include layout="@layout/item_movie_shimmer" />
                <include layout="@layout/item_movie_shimmer" />
            </LinearLayout>


        </com.facebook.shimmer.ShimmerFrameLayout>
    </RelativeLayout>
</layout>