<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.detail.DetailActivity">

        <ImageView
            android:id="@+id/img_backdrop"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="135dp"
            android:elevation="0dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_poster"
                android:src="@color/colorPrimaryDark"
                android:layout_width="104dp"
                android:layout_height="145dp" />
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/materialCardView"
            app:layout_constraintTop_toBottomOf="@+id/img_backdrop">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_medium"
                android:maxLines="2"
                android:text="Movie Name"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableRow android:layout_marginTop="10dp">

                    <TextView
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/release_date"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_release_date"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="00-00-0000"
                        android:textSize="12sp" />
                </TableRow>

                <TableRow android:layout_marginTop="8dp">

                    <TextView
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/rating"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_rating"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="00"
                        android:textSize="12sp" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView">

            <TextView
                android:id="@+id/tv_rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="9.2"
                android:textColor="@android:color/black"
                android:textSize="19sp" />

            <RatingBar
                android:id="@+id/rating_bar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rating="4.5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/btn_favorite"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="6dp"
            android:paddingTop="5dp"
            android:paddingEnd="13dp"
            android:paddingBottom="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:paddingTop="1dp"
                android:src="@drawable/ic_favorite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:paddingStart="7dp"
                android:text="@string/favorite"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="14dp"
            android:layout_marginTop="24dp"
            android:background="@color/grey"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:orientation="vertical"
            android:paddingStart="26dp"
            android:paddingEnd="26dp"
            android:paddingBottom="100dp"
            app:layout_constraintTop_toBottomOf="@id/view">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/sinopsis"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/decription"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageButton
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:id="@+id/btn_back"
            android:padding="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_back"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>